--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
   <!-- Top bar -->
   <div class="top-bar">
     <div class="brand">
-      <img class="logo" src="https://i.supaimg.com/08305e3d-4e47-4df2-841c-eb61662481ec.jpg" alt="logo"/>
+      <img class="logo" src="https://i.supaimg.com/88e6bc23-41ac-4443-a144-631a191daa13.png" alt="logo"/>
       <span></span>
     </div>
     <div class="user-pill" id="user-pill" style="display:none">
